--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,12 +1,31 @@
 {
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-      {
-        "name": "Attach to .NET Functions",
-        "type": "coreclr",
-        "request": "attach",
-        "processId": "${command:azureFunctions.pickProcess}"
-      }
+        {
+            "name": ".NET Core Attach",
+            "type": "coreclr",
+            "request": "attach",
+            "processId": "${command:pickProcess}"
+        },
+        {
+            "name": "Attach to .NET Functions",
+            "type": "coreclr",
+            "request": "attach",
+            "processId": "${command:azureFunctions.pickProcess}"
+        },
+        {
+            "name": "Launch Test App",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            "program": "${workspaceFolder}/importServiceTags.Tests/bin/Debug/netcoreapp3.1/ImportAzIpRanges.Tests.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/importServiceTags.Tests/",
+            "stopAtEntry": false,
+            "console": "internalConsole"
+        },
     ]
-  }
-  
+}
