--- a/importServiceTags/ImportAzIpRanges.csproj
+++ b/importServiceTags/ImportAzIpRanges.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="4.0.2" />
     <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.5.0"/>
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Http" Version="3.0.2"/>
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.EventGrid" Version="2.1.0" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.4.4" />
   </ItemGroup>
   <ItemGroup>
